--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 bitflags = "2.0.2"
 bytes = "1.4.0"
 notify = { version = "5.1.0", default-features = false, features = ["macos_kqueue"] }
+serde = { version = "1.0.159", features = ["derive"] }
+serde_yaml = "0.9.19"
 tokio = { version = "1.26.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
